fix: dao logo cutoff

--- a/apps/enterprise/src/pages/shared/DAOCard.module.sass
+++ b/apps/enterprise/src/pages/shared/DAOCard.module.sass
@@ -28,14 +28,6 @@
   grid-row: 1 / span 2
   width: 48px
   height: 48px
-  border-radius: 50%
-  background-color: #262829
-  display: flex
-  align-items: center
-  justify-content: center
-  img
-    width: 32px
-    height: 32px
 
 .name
   display: block
